# python-cli-boilerplate

./: pyproject.toml
src/boiler/: cli.py
