[tool.poetry]
name = "python-cli-boilerplate"
version = "0.1.0"
description = ""
authors = ["Sai Jonnala <jspreddy@users.noreply.github.com>"]
packages = [
     { include = "boiler", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
boiler = 'boiler.cli:main'